--- a/POSMOVIL/REGENERALVENTAS.html
+++ b/POSMOVIL/REGENERALVENTAS.html
@@ -238,9 +238,21 @@
   0%, 100% { box-shadow: 0 0 10px #ffcc00; }
   50% { box-shadow: 0 0 25px #ffcc00; }
 }
+    /* Marca de agua de La Proveedora */
+.marca-agua {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 90%;
+  opacity: 0.07;
+  z-index: 0;
+  pointer-events: none;
+}
   </style>
 </head>
 <body>
+  <img src="logo_proveedora.webp" alt="Marca de agua La Proveedora" class="marca-agua">
   <h1>Reportes de Ventas Cortadas</h1>
   <div id="reportes"></div>
 </body>
