Update report title to include 'Rutas 1-2'

--- a/POSMOVIL/REGENERALVENTAS.html
+++ b/POSMOVIL/REGENERALVENTAS.html
@@ -253,7 +253,7 @@
 </head>
 <body>
   <img src="logo_proveedora.webp" alt="Marca de agua La Proveedora" class="marca-agua">
-  <h1>Reportes de Ventas Cortadas</h1>
+  <h1>Reportes de Ventas Cortadas Rutas 1-2</h1>
   <div id="reportes"></div>
 </body>
 </html>
