--- a/POSVTAV2/index.html
+++ b/POSVTAV2/index.html
@@ -1025,50 +1025,63 @@ venta.margen_porcentaje = venta.resumen_financiero.margen_porcentaje;
       const { jsPDF } = window.jspdf;
       const pdf = new jsPDF();
 
-      pdf.setFont("helvetica", "bold");
-      pdf.setFontSize(16);
-      pdf.text("La Proveedora - Ticket de Venta", 10, 15);
+// === ENCABEZADO GENERAL ===
+pdf.setFont("courier", "bold");
+pdf.setFontSize(12);
+pdf.text("PROVEEDORA MATRIZ", 105, 15, { align: "center" });
+pdf.setFont("courier", "normal");
+pdf.text("MADERO 690 SUR, CENTRO", 105, 21, { align: "center" });
+pdf.text("LINARES, NUEVO LEÓN, 67700", 105, 27, { align: "center" });
+pdf.text("RFC: PDD-031204-KL5", 105, 33, { align: "center" });
+pdf.text("TEL: (821) 2121805", 105, 39, { align: "center" });
+pdf.text("RÉGIMEN GENERAL DE LEY", 105, 45, { align: "center" });
+pdf.text("PERSONAS MORALES", 105, 51, { align: "center" });
+pdf.line(10, 54, 200, 54);
 
-      pdf.setFontSize(10);
-      pdf.setFont("helvetica", "normal");
-      pdf.text(`Folio: ${venta.folio}`, 10, 25);
-      pdf.text(`Fecha: ${venta.fecha_txt}`, 10, 30);
-      pdf.text(`Vendedor: ${venta.atendio}`, 10, 35);
-      pdf.text(`Ruta: ${venta.rutaId}`, 10, 40);
-      pdf.text(`Cliente: ${venta.cliente}`, 10, 45);
-      pdf.text(`Método de Pago: ${venta.metodo_pago}`, 10, 50);
+pdf.setFont("courier", "bold");
+pdf.text(`# Venta : ${venta.folio}   Fecha : ${venta.fecha_txt}`, 10, 60);
+pdf.line(10, 62, 200, 62);
 
-      pdf.line(10, 53, 200, 53);
-      let y = 60;
-      pdf.setFont("helvetica", "bold");
-      pdf.text("Cant.   Producto                     Importe", 10, y);
-      pdf.setFont("helvetica", "normal");
-      y += 5;
+let y = 68;
+pdf.setFont("courier", "normal");
 
-      (venta.detalle || []).forEach(item => {
-        const desc = item.nombre.length > 25 ? item.nombre.slice(0, 25) + "…" : item.nombre;
-        pdf.text(`${item.cantidad.toFixed(2)}   ${desc}`, 10, y);
-        pdf.text(`$${item.importe.toFixed(2)}`, 160, y);
-        y += 5;
-        if (y > 270) {
-          pdf.addPage();
-          y = 20;
-        }
-      });
+(venta.detalle || []).forEach(item => {
+  const nombre = item.nombre.length > 35 ? item.nombre.slice(0, 35) + "…" : item.nombre;
+  pdf.text(nombre, 10, y);
+  y += 5;
+  pdf.text(`Cant: ${item.cantidad.toFixed(3)}   ${item.precio_unit.toFixed(2)}   ${item.importe.toFixed(2)}`, 10, y);
+  y += 6;
+  if (y > 270) {
+    pdf.addPage();
+    y = 20;
+  }
+});
 
-// 💵 Totales seguros (evita error .toFixed en undefined)
-const subtotal = Number(venta.subtotal || 0).toFixed(2);
-const impuestos = Number(venta.impuestos || 0).toFixed(2);
-const total = Number(venta.total || 0).toFixed(2);
-
-y += 5;
 pdf.line(10, y, 200, y);
+y += 8;
+
+// === TOTALES Y PIE ===
+const subtotal = venta.resumen_financiero?.subtotal || 0;
+const impuestosIncluidos = (venta.resumen_financiero?.totalIva || 0) + (venta.resumen_financiero?.totalIeps || 0);
+const total = venta.resumen_financiero?.total || 0;
+const recib = venta.recibido || 0;
+const camb = venta.cambio || 0;
+
+pdf.setFont("courier", "bold");
+pdf.text(`Total : ${total.toFixed(2)}`, 10, y);
+y += 5;
+pdf.setFont("courier", "normal");
+pdf.text(`Su Pago : ${recib.toFixed(2)}`, 10, y);
+y += 5;
+pdf.text(`Cambio : ${camb.toFixed(2)}`, 10, y);
 y += 6;
-pdf.text(`Subtotal: $${subtotal}`, 130, y);
+pdf.line(10, y, 200, y);
+y += 8;
+pdf.text(`Artículos vendidos : ${venta.detalle.length}`, 10, y);
 y += 5;
-pdf.text(`Impuestos: $${impuestos}`, 130, y);
+pdf.text(`Incluye ${impuestosIncluidos.toFixed(2)} de Impuestos`, 10, y);
 y += 5;
-pdf.text(`Total: $${total}`, 130, y);
+pdf.text(`Cajero : ${venta.atendio || "—"}`, 10, y);
 
       if (venta.ubicacion?.lat) {
         y += 10;
@@ -1309,74 +1322,51 @@ function render() {
   document.getElementById("lblImpuestos").textContent = money(impuestos);
   document.getElementById("lblTotal").textContent = money(total);
 }
-function generarTextoSimpleRawBT() {
+function generarTextoSimpleRawBT(venta) {
   try {
-    const folio = document.getElementById("tFolio").textContent || "";
-    const fecha = document.getElementById("tFecha").textContent || "";
-    const cliente = document.getElementById("tCliente").textContent || "";
-    const total = document.getElementById("tTotal").textContent || "";
-    const metodo = document.getElementById("tMetodo").textContent || "";
-    const recibido = document.getElementById("tRecibido").textContent || "";
-    const cambio = document.getElementById("tCambio").textContent || "";
+    const total = (venta?.resumen_financiero?.total || 0).toFixed(2);
+    const recibido = (venta?.recibido || 0).toFixed(2);
+    const cambio = (venta?.cambio || 0).toFixed(2);
+    const impuestosIncluidos = ((venta?.resumen_financiero?.totalIva || 0) + (venta?.resumen_financiero?.totalIeps || 0)).toFixed(2);
 
-    // === Encabezado ===
     let texto = `
-LA PROVEEDORA
--------------------------------
-${folio}
-${fecha}
-${cliente}
--------------------------------
-CANT  DESCRIPCIÓN               IMPORTE
--------------------------------
+PROVEEDORA MATRIZ
+MADERO 690 SUR, CENTRO
+LINARES, NUEVO LEÓN, 67700
+RFC: PDD-031204-KL5
+TEL: (821) 2121805
+RÉGIMEN GENERAL DE LEY
+PERSONAS MORALES
+--------------------------------
+# Venta : ${venta.folio}  Fecha : ${venta.fecha_txt}
+--------------------------------
 `;
 
-    // === Línea por producto ===
-    document.querySelectorAll("#tLineas .t-row").forEach(row => {
-      const desc = (row.querySelector(".t-desc")?.textContent || "").trim();
-      const imp = (row.querySelector(".t-imp")?.textContent || "").trim();
-
-      // Cortar descripción si es muy larga
-      const partes = desc.split(" ");
-      let linea = "";
-      let resultado = "";
-
-      partes.forEach(palabra => {
-        if ((linea + " " + palabra).length <= 22) {
-          linea += (linea ? " " : "") + palabra;
-        } else {
-          resultado += linea + "\n";
-          linea = palabra;
-        }
-      });
-      resultado += linea;
-
-      // Solo tomar primera línea para mantener todo en una fila visualmente
-      const descCorta = resultado.split("\n")[0].padEnd(22, " ").substring(0, 22);
-
-      const cantidad = desc.match(/^\d+(\.\d+)?/) ? desc.split(" ")[0] : "";
-      const izq = cantidad ? cantidad.padStart(5, " ") : "     ";
-
-      const lineaFormateada = `${izq} ${descCorta} ${imp.padStart(8, " ")}`;
-      texto += lineaFormateada + "\n";
+    (venta.detalle || []).forEach(it => {
+      const nombre = it.nombre.length > 32 ? it.nombre.slice(0, 32) + "…" : it.nombre;
+      texto += `${nombre}\n`;
+      texto += `Cant: ${it.cantidad.toFixed(3)}   ${it.precio_unit.toFixed(2)}   ${it.importe.toFixed(2)}\n`;
     });
 
-    // === Totales ===
-    texto += `-------------------------------
-TOTAL:       ${total}
-PAGO:        ${metodo}
-RECIBIDO:    ${recibido}
-CAMBIO:      ${cambio}
--------------------------------
+    texto += `--------------------------------
+Total : ${total}
+Su Pago : ${recibido}
+Cambio : ${cambio}
+--------------------------------
+Artículos vendidos : ${venta.detalle.length}
+Incluye ${impuestosIncluidos} de Impuestos
+Cajero : ${venta.atendio || "—"}
+--------------------------------
 ¡Gracias por su compra!
 `;
 
     return texto.trim();
   } catch (err) {
-    console.error("❌ Error generando texto RawBT:", err);
-    return "Error al generar ticket";
+    console.error("❌ Error generando ticket RawBT:", err);
+    return "Error al generar ticket térmico";
   }
 }
+
 </script>
     <!-- 🔹 Modal de Cobro -->
   <div id="modalCobro" style="display:none; position:fixed; inset:0; background:rgba(0,0,0,.45); z-index:1200; align-items:center; justify-content:center;">
