--- a/POSVTAV2/index.html
+++ b/POSVTAV2/index.html
@@ -1346,9 +1346,25 @@ function generarTextoSimpleRawBT(venta) {
     const cambio = (venta?.cambio || 0).toFixed(2);
 
     // ✅ Cálculo total de impuestos (IVA + IEPS)
-    const totalIva = Number(venta?.resumen_financiero?.totalIva || 0);
-    const totalIeps = Number(venta?.resumen_financiero?.totalIeps || 0);
-    const impuestosIncluidos = (totalIva + totalIeps).toFixed(2);
+// 🧮 Calcular impuestos reales desde departamento_info
+let totalIva = 0;
+let totalIeps = 0;
+
+(venta.detalle || []).forEach(det => {
+  const ivaPct = det.departamento_info?.iva || 0;
+  const iepsPct = det.departamento_info?.ieps || 0;
+  const importe = det.importe || (det.precio_unit * det.cantidad) || 0;
+
+  if (ivaPct > 0 || iepsPct > 0) {
+    const base = importe / (1 + ivaPct / 100 + iepsPct / 100);
+    const iva = base * (ivaPct / 100);
+    const ieps = base * (iepsPct / 100);
+    totalIva += iva;
+    totalIeps += ieps;
+  }
+});
+
+const impuestosIncluidos = (totalIva + totalIeps).toFixed(2);
 
     // === ENCABEZADO ===
     let texto = `
